Make first example less obvious

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ TypeError: unsupported operand type(s) for +:
     </p>
     
     <pre style="max-width: 100vw;">types.py<code data-trim class="language-python" style="font-size: 26pt;">
-        print(str(1))
+        print(str(1) + str(2))
         print(str(True) + ' means yes.')
         print(bool(0) + ' means no.')
         print(str(int(6 / 2)) + 'rd time is the charm!')
