--- a/index.html
+++ b/index.html
@@ -1550,7 +1550,7 @@ print(my_list[::2]) # [1, 3, 5]
             <p>So how could we fix our fruit stand code with a for loop?</p>
         </div>
         <div>
-            <pre>count_to_five.py<code class="language-python" style="font-size: 12pt;" data-trim>
+            <pre><code class="language-python" style="font-size: 12pt;" data-trim>
                 # find my market cap
                 total_apple_value = stock['apple'] * prices['apple']
                 total_banana_value = stock['banana'] * prices['banana']
@@ -1576,7 +1576,7 @@ print(my_list[::2]) # [1, 3, 5]
     <h2>For loops</h2>
     <div class="fit-one r-stretch">
         <div>
-            <pre>count_to_five.py<code class="language-python" style="font-size: 16pt;" data-trim>
+            <pre><code class="language-python" style="font-size: 16pt;" data-trim>
                 grand_total = 0
                 for fruit in ['apple', 'banana', 'carrot', 'durian']:
                     fruit_total = stock[fruit] * prices[fruit]
@@ -1593,7 +1593,7 @@ print(my_list[::2]) # [1, 3, 5]
     <h2>For loops</h2>
     <div class="fit-one r-stretch">
         <div>
-            <pre>count_to_five.py<code class="language-python" style="font-size: 16pt;" data-trim>
+            <pre><code class="language-python" style="font-size: 16pt;" data-trim>
                 grand_total = 0
                 for fruit in ['apple', 'banana', 'carrot', 'durian']:
                     fruit_total = stock[fruit] * prices[fruit]
@@ -1613,6 +1613,85 @@ print(my_list[::2]) # [1, 3, 5]
             a single element to the fruit list. No need to touch the loop
             code at all!
         </p>
+    </div>
+</section>
+
+<section>
+    <h2>For loops: exercises</h2>
+    <div class="read-text">
+        <p>
+            Your supplier can now sell you eggplants! How can you modify this for loop
+            so that you keep track of your new product?
+        </p>
+        <p>
+            How can you modify this for loop to also print the number of each type of
+            produce you have in stock?
+        </p>
+    </div>
+</section>
+
+<section data-auto-animate="">
+    <h2>Conditionals</h2>
+    <div class="read-text">
+        <p>
+            Sometimes you want to check if something is true or false, and perform different
+            actions based on the results.
+        </p>
+        <p>
+            In python we do this with <span class="emph">if/else statements</span>.
+        </p>
+    </div>
+</section>
+
+<section data-auto-animate="">
+    <h2>Conditionals</h2>
+    <div class="fit-two">
+        <div>
+            <p>
+                Just like with a For loop, whitespace is important! It defines
+                which region belongs in which block.
+            </p>
+        </div>
+        <div>
+            <pre>if_else.py<code class="language-python smaller" data-trim>
+                python_is_fun = True
+                if python_is_fun:
+                    print('Woohoo!')
+                else:
+                    # this doesn't happen because
+                    # the if statement was True
+                    print('I want to go home.')
+            </code></pre>
+            <pre>output<code data-trim>
+                Woohoo!
+            </code></pre>
+        </div>
+    </div>
+</section>
+<section data-auto-animate="">
+    <h2>Conditionals</h2>
+    <div class="fit-two">
+        <div>
+            <p>
+                You can use any type in an if/else statement, since (almost) all types
+                have a boolean evaluation. For instance, <span class="fake-code">0</span>
+                is <span class="fake-code">False</span> while <span class="fake-code">12</span>
+                would be <span class="fake-code">True</span>.
+            </p>
+        </div>
+        <div>
+            <pre>if_else.py<code class="language-python smaller" data-trim>
+                number_of_eggs = 2
+                if number_of_eggs > 0:
+                    print('Making omelette...')
+                    number_of_eggs -= 1
+                else:
+                    print('We are out of eggs!')
+            </code></pre>
+            <pre>output<code data-trim language-shell>
+                Making omelette...
+            </code></pre>
+        </div>
     </div>
 </section>
 
