Typo on while loop

--- a/index.html
+++ b/index.html
@@ -1862,7 +1862,7 @@ print(my_list[::2]) # [1, 3, 5]
     <div class="fit-two">
         <div>
             <p>
-                <span class="emph">While loops</span> continue to loop until their
+                <span class="emph">While loops</span> continue to loop <span class="emph">while</span> their
                 condition is <span class="fake-code">True</span>.
             </p>
         </div>
