--- a/index.html
+++ b/index.html
@@ -1756,9 +1756,9 @@ print(my_list[::2]) # [1, 3, 5]
         </div>
         <div>
             <pre><code class="language-python" data-trim>
-                print(True and True) # True
-                print(True and False) # True
-                print(False and False) # False
+                print(True or True) # True
+                print(True or False) # True
+                print(False or False) # False
             </code></pre>
         </div>
     </div>
@@ -2045,8 +2045,8 @@ print(my_list[::2]) # [1, 3, 5]
 </section>
 
 <section>
-    <div class="r-stretch">
-        <pre><code class="language-python" style="font-size: 12pt; height: 60vh; max-height: unset;" data-trim>
+    <div>
+        <pre><code class="language-python" style="font-size: 12pt" data-trim>
             # store guests in a list
             guests = [
                 'Jeff Rosenstock',
