--- a/exercises/day4/index.html
+++ b/exercises/day4/index.html
@@ -8,6 +8,112 @@
     <link rel="stylesheet" href="/exercises/static/exercises.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <div class="page-view">
+        <div class="header">
+            <h1>Exercises - Day 4</h1>
+            <h2>Lists and Dicts</h2>
+        </div>
+        <div class="exercise">
+            <section>
+                <h2>Exercise/homework</h2>
+                <div class="read-text">
+                    <p>You run a bad produce stand. You have one each of the following fruits/veggies:</p>
+                    <ul>
+                        <li>Apple</li>
+                        <li>Banana</li>
+                        <li>Carrot</li>
+                        <li>Durian</li>
+                    </ul>
+                    <p>How might you represent your stock as a python object?</p>
+                </div>
+            </section>
+            <section>
+                <h2>Exercise/homework</h2>
+                <div class="read-text">
+                    <p>
+                        Someone buys your carrot. How can you remove it from your stock
+                        object so that nobody tries to buy what you don't have?
+                    </p>
+                </div>
+            </section>
+            <section>
+                <h2>Exercise/homework</h2>
+                <div class="read-text">
+                    <p>
+                        Congratulations! You've secured some venture capital funding!
+                        You can now afford to stock more than one of each type of produce.
+                    </p>
+                    <p>
+                        With your new capital, you buy three apples, ten bananas, six
+                        carrots, and ninety-seven durians.
+                    </p>
+                    <p>
+                        It would be nice to keep track of each item, and how many you have.
+                        How would you change your stock object (if at all) to accomplish this?
+                    </p>
+                </div>
+            </section>
+            <section>
+                <h2>Exercise/homework</h2>
+                <div class="fit-two">
+                    <div>
+                        <p>
+                            Wow, your shop is doing really well now that you can have more than one
+                            of everything. However, customers are annoyed that it takes you a long time to figure out
+                            how much their order costs.
+                        </p>
+                        <p>
+                            It would be nice if you could access the price
+                            using the name of the item instead of having to look them up in the table
+                            below.
+                        </p>
+                        <p>
+                            How might you make a python object to help you do this?
+                        </p>
+                    </div>
+                    <table>
+                        <thead>
+                          <tr>
+                            <th>Produce</th>
+                            <th>Price</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Apple</td>
+                            <td>$0.99</td>
+                          </tr>
+                          <tr>
+                            <td>Banana</td>
+                            <td>$10.00</td>
+                          </tr>
+                          <tr>
+                            <td>Carrot</td>
+                            <td>$2.99<br></td>
+                          </tr>
+                          <tr>
+                            <td>Durian<br></td>
+                            <td>$0.10</td>
+                          </tr>
+                        </tbody>
+                        </table>
+                </div>
+            </section>
+            <section>
+                <h2>Exercise/homework</h2>
+                <div class="read-text">
+                    <p>Let's figure out how much money you've invested in this shop.</p>
+                    <p>
+                        Write some code which will check the stock of each produce item,
+                        and then print out the total value for that type of produce! Then
+                        print the sum of all your investments.
+                    </p>
+                </div>
+            </section>
+        </div>
+        <div class="solution-holder">
+            <a href="day4/solution.html">View solution</a>
+        </div>
+    </div>
 </body>
 </html>
