--- a/exercises/day4/index.html
+++ b/exercises/day4/index.html
@@ -112,7 +112,7 @@
             </section>
         </div>
         <div class="solution-holder">
-            <a href="day4/solution.html">View solution</a>
+            <a href="solution.html">View solution</a>
         </div>
     </div>
 </body>
