--- a/exercises/day5/index.html
+++ b/exercises/day5/index.html
@@ -147,7 +147,7 @@ randint(0, 5)
             </section>
         </div>
         <div class="solution-holder">
-            <a href="day5/solution.html">View solution</a>
+            <a href="solution.html">View solution</a>
         </div>
     </div>
 </body>
