--- a/index.html
+++ b/index.html
@@ -1207,6 +1207,7 @@ print(my_list[::2]) # [1, 3, 5]
 
 <section data-auto-animate="">
     <h2>Exercise/homework</h2>
+    <a href="/exercises/day4/">One-page version</a>
     <div class="read-text">
         <p>You run a bad produce stand. You have one each of the following fruits/veggies:</p>
         <ul>
@@ -1359,7 +1360,7 @@ print(my_list[::2]) # [1, 3, 5]
 <section>
 
 <section>
-    <h1>Day Five</h1>
+    <h1>Day Five: Control Flow</h1>
 </section>
 
 <section>
@@ -1909,6 +1910,7 @@ print(my_list[::2]) # [1, 3, 5]
 
 <section data-auto-animate="">
     <h2>Homework/exercises</h2>
+    <a href="/exercises/day5/">One-page version</a>
     <div class="read-text">
         <p>
             Your fruit stand did so well you've decided you're going to try to make
