--- a/exercises/day5/solution.html
+++ b/exercises/day5/solution.html
@@ -42,20 +42,12 @@ menu = {
 #
 # Bonus Info: Don't worry if it's confusing ----------------------
 # |
-# | menu.keys() returns a "dict_keys" object, which is a type of
-# | generator, and essentially acts as a "set", another type we haven't
-# | talked about.
-# | 
-# | However, unlike a real set, dict_keys objects cannot
+# | menu.keys() returns a "dict_keys" object, which is essentially
+# | a set (a type we haven't discussed yet). Elements of sets cannot
 # | be accessed by index, so we have to convert it to a list in order
 # | to pick a random menu item.
 # | 
-# | If we just wanted to iterate over the menu items, we could
-# | use menu.keys() as-is. Additionally, in practice, if you try
-# | to iterate over a dictionary you'll iterate over the keys by default,
-# | so list(menu) would work. But it's best to be explicit when teaching.
-# | 
-# End bonus info --------------------------------------------------
+# End bonus info -------------------------------------------------
 
 menu_items = list(menu.keys())
 
