--- a/exercises/day6/solution.html
+++ b/exercises/day6/solution.html
@@ -9,78 +9,114 @@
 </head>
 <body>
     <div class="solution">
-        <pre><code class="language-python">
-# store guests in a list
-guests = [
-    'Jeff Rosenstock',
-    'Phoebe Bridgers',
-    'Stefan Babcock',
-    'Maria Maita-Keppeler',
-    'Rod MacKinnon',
-    'Marie Curie (ghost)'
-]
+<pre><code class="language-python">from random import choice
 
-# import the randint function
-from random import randint
-
-# store the menu in a dictionary
-#
-# Same rationale as last week --- the guests are independent,
-# no other data associated with them. However, there's a natural
-# association between an item and its price. Hence, a key: value
-# pair.
-menu = {
-'Skaghetti': 13.12,
-'(Sad and) Hot Dish': 14.99,
-'Robot Writes a Menu': 21.99,
-'Road Dog': 7.99,
-'French Fries (extra salty)': 6.99,
-'Radium (do not eat)': 10.99
+original_menu = {
+    'Skaghetti': 13.12,
+    '(Sad and) Hot Dish': 14.99,
+    'Robot Writes a Menu': 21.99,
+    'Road Dog': 7.99,
+    'French Fries (extra salty)': 6.99
 }
 
-# make list of menu items for convenience
-#
-# Bonus Info: Don't worry if it's confusing ----------------------
-# |
-# | menu.keys() returns a "dict_keys" object, which is essentially
-# | a set (a type we haven't discussed yet). Elements of sets cannot
-# | be accessed by index, so we have to convert it to a list in order
-# | to pick a random menu item.
-# | 
-# End bonus info -------------------------------------------------
+sushi_menu = {
+    'Tuna Roll': 17.00,
+    'Softshell Crab Roll': 18.00,
+    'Shrimp Tempura Roll': 18.00,
+    'Dragon Roll': 19.00,
+    'Ahi Tuna Nigiri': 4.00,
+    'Eel Nigiri': 5.00,
+    'Mackerel Nigiri': 4.00,
+    'Squid Nigiri': 4.00
+}
 
-menu_items = list(menu.keys())
+burger_menu = {
+    'C Bar Burger': 13.00,
+    'Chef Burger': 13.00,
+    'Veggie Burger': 14.00,
+    'Bacon Blue Cheese Burger': 12.00,
+    'Cheese Burger': 8.00,
+    'Fries': 3.00,
+    'Tots': 4.00
+}
 
-# for each guest:
-# 
-# Reminder: this means that through every loop, the current guest
-# we're "thinking about" will be stored in the `guest` variable.
+thai_menu = {
+    'Tom Yum Soup': 10.00,
+    'Boss Special': 15.50,
+    'Pad Kra Prao': 13.00,
+    'Gang Mussa-Muhn': 14.00,
+    'Pad Thai': 13.50,
+    'Pad See-Ew': 13.50,
+    'Garlic Pepper Tofu': 13.00,
+    'Thai Street Fried Rice': 14.00,
+    'Thai Iced Tea': 4.50
+}
+
+# put the menus in a dict for easy access later
+menus = {
+    'original': original_menu,
+    'sushi': sushi_menu,
+    'burger': burger_menu,
+    'thai': thai_menu
+}
+
+def take_order(guest, menu):
+    # This line picks a random option from the keys of the
+    # given menu. Those will be the names of the dishes.
+
+    order = choice(list(menu.keys()))
+    print(guest + ' ordered ' + order)
+
+    # and then we return the price, which is the value for the
+    # given key
+    return menu[order]
+
+# I'll make my guests using a for loop, but making them by hand
+# would work too!
+
+guests = []
+for guest in [
+    'Alice', 'Bob', 'Charles', 'Danielle',
+    'Eddy', 'Frank', 'Greg',
+    'Hannah', 'Ingrid', 'James'
+    ]:
+    guests.append({
+        'name': guest,
+        'restaurant': choice(list(menus.keys())),
+        'order': ''
+    })
+
+# not strictly part of the assignment, but will be helpful to make sure everything is working
+# can also use it in the last function.
+def print_guest(guest):
+    # check if order is empty or not
+    if guest['order']:
+        order = ' ordered ' + guest['order']
+    else:
+        order = " hasn't ordered yet"
+    print(guest['name'] + order + ' from ' + guest['restaurant'] + '.')
+
+print('Before ordering:')
 for guest in guests:
+    print_guest(guest)
 
-    # take their order
-    # 
-    # subtract 1 from length becasue randint is inclusive,
-    # and len gives the number of elements, not the index
-    # of the last element. Zero indexing!
-    order = menu_items[randint(0, len(menu_items) - 1)]
+def handle_guests(guest_list, menus):
+    total_income = 0.00
 
-    # if a living person ordered radium, kindly ask them to pick
-    # something else
-    # 
-    # I use a while loop here because we're picking randomly. That
-    # way if a non-ghost picks radium twice or more in a row we'll
-    # catch it. Using an if: statement would only catch it the first
-    # time.
-    while guest != 'Marie Curie (ghost)' and order == 'Radium (do not eat)':
-        print(guest + ', please pick another order.')
-        order = menu_items[randint(0, len(menu_items) - 1)]
+    for guest in guest_list:
+        menu = menus[guest['restaurant']]
+        order = choice(list(menu.keys()))
+        guest['order'] = order
+        total_income += menu[order]
 
-    # then we print the name, order, and price.
-    print(guest + ' ordered ' + order + ' which costs $' + str(menu[order]))
+    return total_income
 
-# extra credit: what would the output be if we had put the print()
-# statement here, outside the loop, instead of in the loop?
-        </code></pre>
+total_income = handle_guests(guests, menus)
+
+print('\nAfter ordering:')
+for guest in guests:
+    print_guest(guest)
+print('Total sales tonight: ' + str(total_income))</code></pre>
     </div>
 </body>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/tokyo-night-dark.min.css">
