Fix code and typos

--- a/exercises/day6/index.html
+++ b/exercises/day6/index.html
@@ -91,7 +91,7 @@ thai_menu = {
             <section data-auto-animate>
                 <h2>Exercises</h2>
                 <p>
-                    Now create a list ten guests. Each guest should be represented by a
+                    Now create a list of ten guests. Each guest should be represented by a
                     dictionary with their name, the restaurant they want to go to, and
                     their order from that restaurant (this will be empty at first). For
                     instance:
