--- a/index.html
+++ b/index.html
@@ -2577,8 +2577,8 @@ Marie Curie (ghost) ordered Skaghetti which costs $13.12
     <div class="read-text">
         <p>
             <span class="emph">Write a function</span> which takes a guests's name
-            and a restaurant's menu and returns the guest's name and their selection
-            from the menu.
+            and a restaurant's menu as inputs, prints the guest's name and order,
+            and returns the price of the order.
         </p>
     </div>
 </section>
@@ -2586,7 +2586,7 @@ Marie Curie (ghost) ordered Skaghetti which costs $13.12
 <section data-auto-animate>
     <h2>Exercises</h2>
     <p>
-        Now create a list ten guests. Each guest should be represented by a
+        Now create a list of ten guests. Each guest should be represented by a
         dictionary with their name, the restaurant they want to go to, and
         their order from that restaurant (this will be empty at first). For
         instance:
