--- a/index.html
+++ b/index.html
@@ -2620,6 +2620,116 @@ Marie Curie (ghost) ordered Skaghetti which costs $13.12
     <h1>My exercise answers. Do yours first!</h1>
 </section>
 
+<section>
+<pre><code class="language-python">from random import choice
+
+original_menu = {
+    'Skaghetti': 13.12,
+    '(Sad and) Hot Dish': 14.99,
+    'Robot Writes a Menu': 21.99,
+    'Road Dog': 7.99,
+    'French Fries (extra salty)': 6.99
+}
+
+sushi_menu = {
+    'Tuna Roll': 17.00,
+    'Softshell Crab Roll': 18.00,
+    'Shrimp Tempura Roll': 18.00,
+    'Dragon Roll': 19.00,
+    'Ahi Tuna Nigiri': 4.00,
+    'Eel Nigiri': 5.00,
+    'Mackerel Nigiri': 4.00,
+    'Squid Nigiri': 4.00
+}
+
+burger_menu = {
+    'C Bar Burger': 13.00,
+    'Chef Burger': 13.00,
+    'Veggie Burger': 14.00,
+    'Bacon Blue Cheese Burger': 12.00,
+    'Cheese Burger': 8.00,
+    'Fries': 3.00,
+    'Tots': 4.00
+}
+
+thai_menu = {
+    'Tom Yum Soup': 10.00,
+    'Boss Special': 15.50,
+    'Pad Kra Prao': 13.00,
+    'Gang Mussa-Muhn': 14.00,
+    'Pad Thai': 13.50,
+    'Pad See-Ew': 13.50,
+    'Garlic Pepper Tofu': 13.00,
+    'Thai Street Fried Rice': 14.00,
+    'Thai Iced Tea': 4.50
+}
+
+# put the menus in a dict for easy access later
+menus = {
+    'original': original_menu,
+    'sushi': sushi_menu,
+    'burger': burger_menu,
+    'thai': thai_menu
+}
+
+# not strictly part of the assignment, but will be helpful to make sure everything is working
+# can also use it in the last function.
+def print_guest(guest):
+    # check if order is empty or not
+    if guest['order']:
+        order = ' ordered ' + guest['order']
+    else:
+        order = " hasn't ordered yet"
+    print(guest['name'] + order + ' from ' + guest['restaurant'] + '.')
+
+def take_order(guest, menu):
+    # This line picks a random option from the keys of the
+    # given menu. Those will be the names of the dishes.
+
+    guest['order'] = choice(list(menu.keys()))
+    print_guest(guest)
+
+    # and then we return the price, which is the value for the
+    # given key
+    return menu[guest['order']]
+
+# I'll make my guests using a for loop, but making them by hand
+# would work too!
+
+guests = []
+for guest in [
+    'Alice', 'Bob', 'Charles', 'Danielle',
+    'Eddy', 'Frank', 'Greg',
+    'Hannah', 'Ingrid', 'James'
+    ]:
+    guests.append({
+        'name': guest,
+        'restaurant': choice(list(menus.keys())),
+        'order': ''
+    })
+
+print('Before ordering:')
+for guest in guests:
+    print_guest(guest)
+
+print('\nAfter ordering:')
+
+def handle_guests(guest_list, menus):
+    total_income = 0.00
+
+    for guest in guest_list:
+        # take_order returns the price of the item, in addition to
+        # printing the guest, so we can just add the result straight
+        # to the income without worrying about anything else.
+        total_income += take_order(guest, menus[guest['restaurant']])
+
+    return total_income
+
+total_income = handle_guests(guests, menus)
+
+print('Total sales tonight: ' + str(total_income))</code></pre>
+</section>
+
 </section>
 
 </div>
