--- a/exercises/day5/index.html
+++ b/exercises/day5/index.html
@@ -127,16 +127,9 @@ randint(0, 5)
                         But, <span class="emph">if anyone except Marie Curie's ghost picked Radium</span>,
                         have them pick another order instead of printing the price!
                     </p>
-                    <p id="menu-exercise-hint">
+                    <p id="menu-exercise-hint" class="hint">
                         Show hint
                     </p>
-                    <style>
-                        p#menu-exercise-hint {
-                            font-style: italic;
-                            color: #00000066;
-                            cursor: pointer;
-                        }
-                    </style>
                     <script>
                         const menuHint = document.getElementById('menu-exercise-hint');
                         menuHint.addEventListener('click', () => {
