--- a/exercises/index.html
+++ b/exercises/index.html
@@ -13,6 +13,8 @@
         <div style="display: flex; flex-direction: column;">
             <a href="day4">Day 4 - Lists and Dicts</a>
             <a href="day5">Day 5 - Control Flow</a>
+            <a href="loop_practice">More Control Flow</a>
+            <a href="day6">Day 6 - Functions</a>
         </div>
     </div>
 </body>
