--- a/exercises/index.html
+++ b/exercises/index.html
@@ -15,6 +15,7 @@
             <a href="day5">Day 5 - Control Flow</a>
             <a href="loop_practice">More Control Flow</a>
             <a href="day6">Day 6 - Functions</a>
+            <a href="file-io">Day 7 - File I/O</a>
         </div>
     </div>
 </body>
