--- a/exercises/day4/solution.html
+++ b/exercises/day4/solution.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/exercises/static/exercises.css">
+    <link rel="stylesheet" href="../static/exercises.css">
     <title>Solutions - Day 4</title>
 </head>
 <body>
