--- a/exercises/day6/index.html
+++ b/exercises/day6/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercises - Day 5</title>
-    <link rel="stylesheet" href="/exercises/static/exercises.css">
+    <link rel="stylesheet" href="../static/exercises.css">
 </head>
 <body>
     <div class="page-view">
